UI bug triage (#1146)
* update cover image generation logic to show uncropped images

* update cover image generation logic to show uncropped images (collections)

* adjust foreground-background contrast for full description modal

* add an unescape filter to render html entities for collection descriptions

* add spacing between paragraphs in collection full description modal

* add a button/modal for collection metadata

* fix a missing include

* improve contrast for flatpage links

* update the collection hero layout and styles

* hide pagination when there is no item to show

* update flatpage link colors

https://trello.com/c/LzDdkyn9/315-bug-is-the-standard-link-color-too-close-to-the-text-color-see-about-pages-for-examples

* make the vertical spacing between title and content consistent

* update breadcrumb for profile pages

* style account overview page

* update other sections of user profile

* polish user profile forms

* update the logout uk-alert-success banner style

* style the notification modal

* add pagination on the bottom

* update login modal social auth

* stretch page to fill entire viewport

* add label for homepage search field

* accessibility: search and my account

* accessibility: add text to search page button

* accessibility: search page form fields

* accessibility: volume page fields

* accessibility: aria-label

--- a/apps/static/css/components/flatpage.scss
+++ b/apps/static/css/components/flatpage.scss
@@ -9,7 +9,8 @@
   width: auto; /* Fit to content width */
 }
 
-.navigation a {
+.navigation a,
+.navigation .uk-nav-default > li > a {
   color: $rx-color-midnight-blue;
   text-decoration: none;
   display: block;
@@ -19,8 +20,9 @@
   font-size: medium;
 }
 
-.navigation a.active {
-  font-weight: bold; /* Bold text for active item */
+.navigation a.active,
+.navigation .uk-nav-default > li > a.active {
+  font-weight: bold;
   color: $rx-color-midnight-blue;
 
   &:hover {
@@ -133,15 +135,14 @@ $content-heading-sizes: (
 }
 
 .content a {
-  color: $rx-color-rose-red;
+  color: $rx-color-mario-red;
   text-decoration: underline;
-  &:hover { color: darken($rx-color-rose-red, 10%); }
 }
 
 blockquote {
   border-left: 4px solid $rx-color-linen-blue !important;
   padding-left: 1rem !important;
-  color: darken($color-black, 10%) !important;
+  color: lighten($color-black, 20%) !important;
   margin: 1rem 0 !important;
 }
 
